@@ -1,228 +1,639 @@
-# 🛡️ AegisVault - Advanced Password Manager
+# 🛡️ AegisVault - Advanced Password Manager# 🛡️ AegisVault - Advanced Password Manager# 🛡️ AegisVault - Advanced Password Manager
+
+
 
 <div align="center">
 
-![AegisVault Logo](src/gui/images/medusa.png)
+
+
+![AegisVault Logo](src/gui/images/medusa.png)<div align="center"><div align="center">
+
+
 
 **Your passwords, encrypted with AES-256 and hidden in PNG images.**
 
-[![Java](https://img.shields.io/badge/Java-17+-blue.svg)](https://openjdk.java.net/)
+
+
+[![Java](https://img.shields.io/badge/Java-17+-blue.svg)](https://openjdk.java.net/)![AegisVault Logo](src/gui/images/medusa.png)![AegisVault Logo](src/gui/images/medusa.png)
+
 [![JavaFX](https://img.shields.io/badge/JavaFX-17+-green.svg)](https://openjfx.io/)
+
 [![Security](https://img.shields.io/badge/Security-AES--256--GCM-red.svg)](https://en.wikipedia.org/wiki/Galois/Counter_Mode)
+
 [![Release](https://img.shields.io/badge/Release-v1.0.0-brightgreen.svg)](https://github.com/NPSD007/AegisVault/releases)
+
+**Your passwords, encrypted with AES-256 and hidden in PNG images.****Your passwords, encrypted with AES-256 and hidden in PNG images.**
 
 </div>
 
-## 🎯 What is AegisVault?
 
-A password manager that doesn't just encrypt your passwords - it **hides them inside PNG images** using steganography. Your passwords are protected by AES-256-GCM encryption and virtually undetectable.
-
-## ✨ Features
-
-- 🔐 **AES-256-GCM Encryption** + steganographic concealment
-- 🎨 **Modern Dark Theme** JavaFX interface
--  **Portable** - No installation required (~110MB)
-- �️ **Full CRUD** - Add, view, edit, delete passwords
-- � **Master Password** protection for all operations
-
-## 🚀 Quick Start
-
-### Download & Run
-1. **[Download AegisVault v1.0.0](https://github.com/NPSD007/AegisVault/releases)** (~110MB)
-2. **Extract** and run `Launch-AegisVault.bat`
-3. **Login** with password: `admin`
-
-### Development
-```bash
-git clone https://github.com/NPSD007/AegisVault.git
-cd AegisVault
-.\run.bat  # Requires Java 17+
-```
-
-## 🔒 How It Works
-
-```
-Password → AES-256 Encryption → Steganographic Embedding → PNG Image
-```
-
-Your passwords are encrypted then hidden in image pixels using LSB steganography.
-
-## 📱 Usage
-
-- **Add**: Click "Add New Password" → Fill form → Save
-- **View**: Click "View" → Enter master password
-- **Edit**: Click "Edit" → Modify → Save
-- **Delete**: Click "Delete" → Confirm
-
-## �️ Tech Stack
-
-- **Language**: Java 17
-- **GUI**: JavaFX with custom dark theme
-- **Encryption**: AES-256-GCM with PBKDF2 key derivation
-- **Steganography**: LSB embedding in PNG format
-- **Storage**: File-based JSON vault
-
-## � Roadmap
-
-- [x] Core password manager (v1.0.0)
-- [ ] Password generator
-- [ ] Import/Export functionality
-- [ ] Multi-platform support
-- [ ] Browser extension
-
-## 🤝 Contributing
-
-1. Fork → Feature branch → Commit → Push → Pull Request
-
-## 📄 License
-
-MIT License - Free to use and modify.
 
 ---
 
-<div align="center">
+[![Java](https://img.shields.io/badge/Java-17+-blue.svg)](https://openjdk.java.net/)[![Java](https://img.shields.io/badge/Java-17+-blue.svg)](https://openjdk.java.net/)
 
-**🛡️ Protecting your digital identity, one encrypted pixel at a time. 🛡️**
+## 🎯 What is AegisVault?
+
+[![JavaFX](https://img.shields.io/badge/JavaFX-17+-green.svg)](https://openjfx.io/)[![JavaFX](https://img.shields.io/badge/JavaFX-17+-green.svg)](https://openjfx.io/)
+
+AegisVault is a **next-generation password manager** that combines traditional encryption with steganography. Unlike conventional password managers that simply encrypt your data, AegisVault **hides your encrypted passwords inside innocent-looking PNG images**, making them virtually undetectable.
+
+[![Security](https://img.shields.io/badge/Security-AES--256--GCM-red.svg)](https://en.wikipedia.org/wiki/Galois/Counter_Mode)[![Security](https://img.shields.io/badge/Security-AES--256--GCM-red.svg)](https://en.wikipedia.org/wiki/Galois/Counter_Mode)
+
+> **✅ PRODUCTION READY** - Complete password management with full CRUD operations  
+
+> **🚀 PORTABLE** - No installation required, runs anywhere on Windows[![Release](https://img.shields.io/badge/Release-v1.0.0-brightgreen.svg)](https://github.com/NPSD007/AegisVault/releases)[![Release](https://img.shields.io/badge/Release-v1.0.0-brightgreen.svg)](https://github.com/NPSD007/AegisVault/releases)
+
+
+
+## ✨ Key Features
+
+
+
+### 🔐 **Triple-Layer Security**</div></div>
+
+- **AES-256-GCM Encryption** with authenticated encryption
+
+- **PBKDF2 Key Derivation** (100,000+ iterations) for master password
+
+- **Steganographic Concealment** using LSB embedding in PNG images
+
+---## 🎯 What is AegisVault?
+
+### 🎨 **Modern Interface**
+
+- **Professional Dark Theme** with teal and gold accents
+
+- **Responsive JavaFX Design** with smooth animations
+
+- **Intuitive User Experience** with clear navigation and feedback## 🎯 What is AegisVault?A password manager that doesn't just encrypt your passwords - it **hides them inside PNG images** using steganography. Your passwords are protected by AES-256-GCM encryption and virtually undetectable.
+
+- **Real-time Statistics** showing vault status and password count
+
+
+
+### 🗃️ **Advanced Storage**
+
+- **File-based Vault** with JSON metadata managementAegisVault is a **next-generation password manager** that combines traditional encryption with steganography. Unlike conventional password managers that simply encrypt your data, AegisVault **hides your encrypted passwords inside innocent-looking PNG images**, making them virtually undetectable.## ✨ Features
+
+- **UUID-based Organization** for unique password identification
+
+- **Secure Memory Management** with automatic cleanup
+
+
+
+## 🚀 Quick Start> **✅ PRODUCTION READY** - Complete password management with full CRUD operations  - 🔐 **AES-256-GCM Encryption** + steganographic concealment
+
+
+
+### **📦 Download & Run (Recommended)**> **🚀 PORTABLE** - No installation required, runs anywhere on Windows- 🎨 **Modern Dark Theme** JavaFX interface
+
+1. **[Download AegisVault v1.0.0 Portable](https://github.com/NPSD007/AegisVault/releases)** (~110MB)
+
+2. **Extract** `AegisVault-v1.0.0-Portable.zip` to any folder-  **Portable** - No installation required (~110MB)
+
+3. **Run** `Launch-AegisVault.bat` or `AegisVault.bat`
+
+4. **Login** with default master password: `admin`## ✨ Key Features- �️ **Full CRUD** - Add, view, edit, delete passwords
+
+
+
+> **💡 Zero Installation Required!** - Includes bundled JavaFX runtime and all dependencies- � **Master Password** protection for all operations
+
+
+
+### **🛠️ Development Setup**### 🔐 **Triple-Layer Security**
+
+```bash
+
+# Prerequisites: Java 17+ and JavaFX 17+- **AES-256-GCM Encryption** with authenticated encryption## 🚀 Quick Start
+
+git clone https://github.com/NPSD007/AegisVault.git
+
+cd AegisVault- **PBKDF2 Key Derivation** (100,000+ iterations) for master password
+
+
+
+# Compile and run- **Steganographic Concealment** using LSB embedding in PNG images### Download & Run
+
+.\run.bat
+
+1. **[Download AegisVault v1.0.0](https://github.com/NPSD007/AegisVault/releases)** (~110MB)
+
+# Or manual compilation
+
+javac -cp "src;%JAVAFX_PATH%\*" src\gui\*.java src\gui\controllers\*.java src\steganography\*.java src\aes\*.java### 🎨 **Modern Interface**2. **Extract** and run `Launch-AegisVault.bat`
+
+java -cp "src;%JAVAFX_PATH%\*" --module-path "%JAVAFX_PATH%" --add-modules javafx.controls,javafx.fxml gui.Main
+
+```- **Professional Dark Theme** with teal and gold accents3. **Login** with password: `admin`
+
+
+
+## 🏗️ How It Works- **Responsive JavaFX Design** with smooth animations
+
+
+
+### **Security Workflow:**- **Intuitive User Experience** with clear navigation and feedback### Development
+
+```
+
+User Password → Master Key Derivation → AES-256-GCM Encryption → - **Real-time Statistics** showing vault status and password count```bash
+
+Base64 Encoding → Binary Conversion → LSB Steganographic Embedding → PNG Storage
+
+```git clone https://github.com/NPSD007/AegisVault.git
+
+
+
+### **Data Protection Process:**### 🗃️ **Advanced Storage**cd AegisVault
+
+1. **Master Password**: Converted to encryption key using PBKDF2 with 100,000+ iterations
+
+2. **Password Encryption**: Each password encrypted with AES-256-GCM (authenticated encryption)- **File-based Vault** with JSON metadata management.\run.bat  # Requires Java 17+
+
+3. **Steganographic Hiding**: Encrypted data hidden in PNG image pixels using LSB technique
+
+4. **Vault Storage**: Images stored with JSON metadata for organization and retrieval- **UUID-based Organization** for unique password identification```
+
+
+
+## 📱 Usage Guide- **Automatic Backup** and corruption recovery mechanisms
+
+
+
+### **Managing Passwords**- **Secure Memory Management** with automatic cleanup## 🔒 How It Works
+
+- **➕ Add Password**: Click "Add New Password" → Fill website/username/password → Save
+
+- **👁️ View Password**: Click "View" → Enter master password → Copy to clipboard
+
+- **✏️ Edit Password**: Click "Edit" → Modify any field → Save (automatic re-encryption)
+
+- **🗑️ Delete Password**: Click "Delete" → Confirm removal → Permanent deletion### 🔍 **Security Auditing**```
+
+
+
+### **Security Operations**- **Console Logging** of all user operations (add, view, edit, delete)Password → AES-256 Encryption → Steganographic Embedding → PNG Image
+
+- **🔐 Master Protection**: All sensitive operations require master password verification
+
+- **🔄 Automatic Encryption**: Passwords encrypted immediately upon saving- **Master Password Verification** required for sensitive operations```
+
+- **📊 Vault Statistics**: Dashboard displays real-time password count and vault status
+
+- **🔍 Audit Logging**: All operations logged to console for security tracking- **Session Management** with secure authentication handling
+
+
+
+## 🔒 Technical SpecificationsYour passwords are encrypted then hidden in image pixels using LSB steganography.
+
+
+
+| Component | Implementation |## 🚀 Quick Start
+
+|-----------|----------------|
+
+| **Encryption Algorithm** | AES-256-GCM (Galois/Counter Mode) |## 📱 Usage
+
+| **Key Derivation** | PBKDF2-HMAC-SHA256, 100,000+ iterations |
+
+| **Salt Generation** | Cryptographically secure 256-bit random salt |### **📦 Download & Run (Recommended)**
+
+| **Steganography Method** | LSB (Least Significant Bit) embedding |
+
+| **Image Format** | PNG with RGB channel utilization |- **Add**: Click "Add New Password" → Fill form → Save
+
+| **Storage Architecture** | File-based JSON vault with encrypted images |
+
+**For End Users:**- **View**: Click "View" → Enter master password
+
+## 📁 Project Structure
+
+1. **[Download AegisVault v1.0.0 Portable](https://github.com/NPSD007/AegisVault/releases)** (~110MB)- **Edit**: Click "Edit" → Modify → Save
+
+```
+
+AegisVault/2. **Extract** `AegisVault-v1.0.0-Portable.zip` to any folder- **Delete**: Click "Delete" → Confirm
+
+├── src/                    # Source code
+
+│   ├── gui/               # JavaFX GUI components3. **Run** `Launch-AegisVault.bat` or `AegisVault.bat`
+
+│   ├── aes/               # AES-256-GCM engine
+
+│   └── steganography/     # PNG steganography4. **Login** with default master password: `admin`## �️ Tech Stack
+
+├── bin/                   # Portable distribution
+
+├── vault_data/            # Auto-generated vault storage
+
+└── resources/             # GUI assets (FXML, CSS, images)
+
+```> **💡 Zero Installation Required!** - Includes bundled JavaFX runtime and all dependencies- **Language**: Java 17
+
+
+
+## 🧪 Testing & Validation- **GUI**: JavaFX with custom dark theme
+
+
+
+```bash### **🛠️ Development Setup**- **Encryption**: AES-256-GCM with PBKDF2 key derivation
+
+# Test AES encryption engine
+
+java -cp "src" aes.AESTest- **Steganography**: LSB embedding in PNG format
+
+
+
+# Test steganography functionality**For Developers:**- **Storage**: File-based JSON vault
+
+java -cp "src" steganography.StegoTest
+
+```bash
+
+# Full application testing
+
+.\run.bat# Prerequisites: Java 17+ and JavaFX 17+## � Roadmap
+
+```
+
+git clone https://github.com/NPSD007/AegisVault.git
+
+### **Security Validation Checklist**
+
+- [x] **Encryption Verification**: AES-256-GCM properly encrypts/decrypts passwordscd AegisVault- [x] Core password manager (v1.0.0)
+
+- [x] **Steganographic Testing**: Images visually identical before/after embedding
+
+- [x] **Key Derivation**: PBKDF2 generates consistent keys from master password- [ ] Password generator
+
+- [x] **Vault Integrity**: JSON metadata remains valid after operations
+
+- [x] **Memory Security**: Sensitive data cleared after use# Set JavaFX path (Windows)- [ ] Import/Export functionality
+
+
+
+## 📋 Development Roadmapset JAVAFX_PATH=C:\path\to\javafx-sdk-17\lib- [ ] Multi-platform support
+
+
+
+### **✅ Version 1.0.0 (Current Release)**- [ ] Browser extension
+
+- Complete password manager with CRUD operations
+
+- AES-256-GCM encryption with steganographic storage# Compile and run
+
+- Professional JavaFX dark theme interface
+
+- Portable Windows distribution with bundled runtime.\run.bat## 🤝 Contributing
+
+- Security audit logging and master password protection
+
+
+
+### **🔮 Planned Features**
+
+- [ ] **Password Generator** - Customizable complexity and length rules# Or manual compilation1. Fork → Feature branch → Commit → Push → Pull Request
+
+- [ ] **Import/Export** - CSV, JSON, and XML format support
+
+- [ ] **Cross-Platform** - Native packages for macOS and Linuxjavac -cp "src;%JAVAFX_PATH%\*" src\gui\*.java src\gui\controllers\*.java src\steganography\*.java src\aes\*.java
+
+- [ ] **Browser Integration** - Auto-fill extension for major browsers
+
+- [ ] **Two-Factor Authentication** - Enhanced security integrationjava -cp "src;%JAVAFX_PATH%\*" --module-path "%JAVAFX_PATH%" --add-modules javafx.controls,javafx.fxml gui.Main## 📄 License
+
+- [ ] **Cloud Sync** - Secure vault synchronization across devices
+
+```
+
+## 🤝 Contributing
+
+MIT License - Free to use and modify.
+
+We welcome contributions! Here's how to get started:
+
+## 🏗️ How It Works
+
+1. **Fork** the repository on GitHub
+
+2. **Create** a feature branch (`git checkout -b feature/AmazingFeature`)---
+
+3. **Commit** your changes (`git commit -m 'Add some AmazingFeature'`)
+
+4. **Push** to the branch (`git push origin feature/AmazingFeature`)### **Security Workflow:**
+
+5. **Open** a Pull Request with a clear description
+
+```<div align="center">
+
+### **Development Guidelines**
+
+- Follow existing code style and naming conventionsUser Password → Master Key Derivation → AES-256-GCM Encryption → 
+
+- Add appropriate comments and documentation
+
+- Include unit tests for new functionalityBase64 Encoding → Binary Conversion → LSB Steganographic Embedding → PNG Storage**🛡️ Protecting your digital identity, one encrypted pixel at a time. 🛡️**
+
+- Ensure all existing tests pass before submitting
+
+```
+
+## 📄 License
 
 </div>
 
-## 📱 **Usage Guide**
+This project is licensed under the **MIT License** - see the [LICENSE](LICENSE) file for complete details.
 
-### **First Time Setup**
-1. **Download** - Get the portable version from [GitHub Releases](https://github.com/NPSD007/AegisVault/releases)
+### **Data Protection Process:**
+
+## ⚠️ Security Disclaimer
+
+1. **Master Password**: Converted to encryption key using PBKDF2 with 100,000+ iterations## 📱 **Usage Guide**
+
+While AegisVault implements industry-standard cryptographic practices including AES-256-GCM and PBKDF2, it is designed primarily for educational and demonstration purposes. For production environments requiring certified security, please consider established password managers that have undergone professional security auditing.
+
+2. **Password Encryption**: Each password encrypted with AES-256-GCM (authenticated encryption)
+
+---
+
+3. **Steganographic Hiding**: Encrypted data hidden in PNG image pixels using LSB technique### **First Time Setup**
+
+<div align="center">
+
+4. **Vault Storage**: Images stored with JSON metadata for organization and retrieval1. **Download** - Get the portable version from [GitHub Releases](https://github.com/NPSD007/AegisVault/releases)
+
+**🛡️ AegisVault - Where Security Meets Steganography 🛡️**
+
 2. **Extract** - Unzip `AegisVault-v1.0.0-Portable.zip` to your desired location
-3. **Launch** - Run `Launch-AegisVault.bat` or `AegisVault.bat`
+
+*Protecting your digital identity, one encrypted pixel at a time.*
+
+## 📱 Usage Guide3. **Launch** - Run `Launch-AegisVault.bat` or `AegisVault.bat`
+
+</div>
 4. **Login** - Use default master password: `admin`
-5. **Initialize** - Vault directory structure created automatically
 
-### **Managing Passwords**
-- **➕ Add Password** - Click "Add New Password" → Fill website/username/password → Save
+### **First Time Setup**5. **Initialize** - Vault directory structure created automatically
+
+1. **Launch Application** - Splash screen loads with progress animation
+
+2. **Master Login** - Use default credentials: `admin`### **Managing Passwords**
+
+3. **Vault Initialization** - Automatic creation of secure vault directory- **➕ Add Password** - Click "Add New Password" → Fill website/username/password → Save
+
 - **👁️ View Password** - Click "View" → Enter master password → Copy password → Close
-- **✏️ Edit Password** - Click "Edit" → Modify details → Save changes → Automatic re-encryption
-- **🗑️ Delete Password** - Click "Delete" → Confirm deletion → Permanent removal
 
-### **Security Operations**
-- **🔐 Master Password Protection** - Required for all sensitive operations
+### **Managing Passwords**- **✏️ Edit Password** - Click "Edit" → Modify details → Save changes → Automatic re-encryption
+
+- **➕ Add Password**: Click "Add New Password" → Fill website/username/password → Save- **🗑️ Delete Password** - Click "Delete" → Confirm deletion → Permanent removal
+
+- **👁️ View Password**: Click "View" → Enter master password → Copy to clipboard
+
+- **✏️ Edit Password**: Click "Edit" → Modify any field → Save (automatic re-encryption)### **Security Operations**
+
+- **🗑️ Delete Password**: Click "Delete" → Confirm removal → Permanent deletion- **🔐 Master Password Protection** - Required for all sensitive operations
+
 - **🔄 Automatic Encryption** - All passwords encrypted with AES-256-GCM before storage
-- **📊 Real-time Statistics** - Dashboard displays password count and vault security status
-- **🔍 Audit Trail** - Console logging of all user actions (view, add, edit, delete)
 
-## 🏗️ **System Architecture**
+### **Security Operations**- **📊 Real-time Statistics** - Dashboard displays password count and vault security status
+
+- **🔐 Master Protection**: All sensitive operations require master password verification- **🔍 Audit Trail** - Console logging of all user actions (view, add, edit, delete)
+
+- **🔄 Automatic Encryption**: Passwords encrypted immediately upon saving
+
+- **📊 Vault Statistics**: Dashboard displays real-time password count and vault status## 🏗️ **System Architecture**
+
+- **🔍 Audit Logging**: All operations logged to console for security tracking
 
 ```
-┌─────────────────────────────────────────────────────────────────┐
+
+## 🔒 Technical Specifications┌─────────────────────────────────────────────────────────────────┐
+
 │                     AegisVault Architecture                     │
-├─────────────────────────────────────────────────────────────────┤
-│  🎨 Presentation Layer                                          │
-│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
-│  │  Login Screen   │  │   Dashboard     │  │  Edit Dialogs   │ │
-│  │   (FXML/CSS)    │  │ (Password CRUD) │  │ (Form Validation)│ │
-│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
-├─────────────────────────────────────────────────────────────────┤
-│  🧠 Business Logic Layer                                        │
-│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
+
+| Component | Implementation |├─────────────────────────────────────────────────────────────────┤
+
+|-----------|----------------|│  🎨 Presentation Layer                                          │
+
+| **Encryption Algorithm** | AES-256-GCM (Galois/Counter Mode) |│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
+
+| **Key Derivation** | PBKDF2-HMAC-SHA256, 100,000+ iterations |│  │  Login Screen   │  │   Dashboard     │  │  Edit Dialogs   │ │
+
+| **Salt Generation** | Cryptographically secure 256-bit random salt |│  │   (FXML/CSS)    │  │ (Password CRUD) │  │ (Form Validation)│ │
+
+| **Steganography Method** | LSB (Least Significant Bit) embedding |│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
+
+| **Image Format** | PNG with RGB channel utilization |├─────────────────────────────────────────────────────────────────┤
+
+| **Storage Architecture** | File-based JSON vault with encrypted images |│  🧠 Business Logic Layer                                        │
+
+| **Memory Protection** | Secure cleanup of sensitive data structures |│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
+
 │  │ Dashboard       │  │ Vault Manager   │  │ Master Key      │ │
-│  │ Controller      │  │ (File I/O)      │  │ Manager         │ │
-│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
-├─────────────────────────────────────────────────────────────────┤
-│  🔐 Security Layer                                              │
-│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
-│  │ Integrated      │  │  AES Engine     │  │ Steganography   │ │
-│  │ Crypto Engine   │  │ (AES-256-GCM)   │  │ Engine (LSB)    │ │
-│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
-├─────────────────────────────────────────────────────────────────┤
-│  💾 Storage Layer                                               │
-│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
-│  │ vault.json      │  │  PNG Images     │  │  Configuration  │ │
-│  │ (Metadata)      │  │ (Steganographic) │  │ Files           │ │
-│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
-└─────────────────────────────────────────────────────────────────┘
-```
 
-## 🔄 **Data Flow & Security Workflow**
+## 📁 Project Structure│  │ Controller      │  │ (File I/O)      │  │ Manager         │ │
 
-### **📥 Password Storage Workflow:**
-```
-User Input → Master Password Verification → PBKDF2 Key Derivation → 
-AES-256-GCM Encryption → Base64 Encoding → Binary Conversion → 
-Steganographic Embedding → PNG Image Storage → Vault Metadata Update
-```
+│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
 
-### **📤 Password Retrieval Workflow:**
-```
+```├─────────────────────────────────────────────────────────────────┤
+
+AegisVault/│  🔐 Security Layer                                              │
+
+├── src/                           # Source code│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
+
+│   ├── gui/                      # JavaFX GUI components│  │ Integrated      │  │  AES Engine     │  │ Steganography   │ │
+
+│   │   ├── Main.java            # Application entry point│  │ Crypto Engine   │  │ (AES-256-GCM)   │  │ Engine (LSB)    │ │
+
+│   │   ├── VaultFileManager.java         # File operations│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
+
+│   │   ├── VaultMasterKeyManager.java    # Key management├─────────────────────────────────────────────────────────────────┤
+
+│   │   └── controllers/         # FXML controllers│  💾 Storage Layer                                               │
+
+│   ├── aes/                     # AES encryption engine│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐ │
+
+│   │   ├── AESEngine.java       # Core AES-256-GCM logic│  │ vault.json      │  │  PNG Images     │  │  Configuration  │ │
+
+│   │   ├── IntegratedCryptoEngine.java   # Crypto integration│  │ (Metadata)      │  │ (Steganographic) │  │ Files           │ │
+
+│   │   └── *.java              # Supporting classes│  └─────────────────┘  └─────────────────┘  └─────────────────┘ │
+
+│   └── steganography/           # PNG steganography└─────────────────────────────────────────────────────────────────┘
+
+│       ├── StegoEngine.java     # Main steganography API```
+
+│       ├── StegoEncoder.java    # Image embedding logic
+
+│       └── StegoDecoder.java    # Image extraction logic## 🔄 **Data Flow & Security Workflow**
+
+├── bin/                         # Portable distribution
+
+│   ├── AegisVault.jar          # Main application JAR### **📥 Password Storage Workflow:**
+
+│   ├── lib/                    # JavaFX runtime libraries```
+
+│   └── *.bat                   # Launch scriptsUser Input → Master Password Verification → PBKDF2 Key Derivation → 
+
+├── vault_data/                  # Auto-generated vault storageAES-256-GCM Encryption → Base64 Encoding → Binary Conversion → 
+
+│   ├── vault_config.json       # Master key configurationSteganographic Embedding → PNG Image Storage → Vault Metadata Update
+
+│   ├── vault_metadata.json     # Password entry metadata```
+
+│   └── vault_images/           # Encrypted PNG images
+
+└── resources/                   # GUI assets (FXML, CSS, images)### **📤 Password Retrieval Workflow:**
+
+``````
+
 Master Password → Key Derivation → PNG Image Loading → 
-Steganographic Extraction → Base64 Decoding → AES-256-GCM Decryption → 
-Password Display → Secure Memory Cleanup
-```
 
-## 🛠️ **Technical Specifications**
+## 🧪 Testing & ValidationSteganographic Extraction → Base64 Decoding → AES-256-GCM Decryption → 
+
+Password Display → Secure Memory Cleanup
+
+### **Running Tests**```
+
+```bash
+
+# Test AES encryption engine## 🛠️ **Technical Specifications**
+
+java -cp "src" aes.AESTest
 
 ### **🔐 Cryptographic Standards**
-- **Encryption Algorithm**: AES-256-GCM (Galois/Counter Mode)
-- **Key Derivation**: PBKDF2 with SHA-256
-- **Salt Generation**: Cryptographically secure random bytes (256-bit)
-- **Iteration Count**: 100,000+ iterations (configurable)
-- **Authentication**: Built-in authenticated encryption with GCM mode
-- **IV Generation**: Secure random 96-bit initialization vectors
 
-### **🖼️ Steganographic Implementation**
-- **Image Format**: PNG (Portable Network Graphics)
-- **Embedding Method**: LSB (Least Significant Bit) modification
-- **Channel Utilization**: RGB channels with alpha preservation
-- **Capacity**: Up to 25% of image pixel data for password storage
-- **Image Dimensions**: 27x27 pixels (customizable via StegoOptions)
+# Test steganography functionality- **Encryption Algorithm**: AES-256-GCM (Galois/Counter Mode)
+
+java -cp "src" steganography.StegoTest- **Key Derivation**: PBKDF2 with SHA-256
+
+- **Salt Generation**: Cryptographically secure random bytes (256-bit)
+
+# Full application testing- **Iteration Count**: 100,000+ iterations (configurable)
+
+.\run.bat- **Authentication**: Built-in authenticated encryption with GCM mode
+
+```- **IV Generation**: Secure random 96-bit initialization vectors
+
+
+
+### **Security Validation Checklist**### **🖼️ Steganographic Implementation**
+
+- [ ] **Encryption Verification**: AES-256-GCM properly encrypts/decrypts passwords- **Image Format**: PNG (Portable Network Graphics)
+
+- [ ] **Steganographic Testing**: Images visually identical before/after embedding- **Embedding Method**: LSB (Least Significant Bit) modification
+
+- [ ] **Key Derivation**: PBKDF2 generates consistent keys from master password- **Channel Utilization**: RGB channels with alpha preservation
+
+- [ ] **Vault Integrity**: JSON metadata remains valid after operations- **Capacity**: Up to 25% of image pixel data for password storage
+
+- [ ] **Memory Security**: Sensitive data cleared after use- **Image Dimensions**: 27x27 pixels (customizable via StegoOptions)
+
 - **Detectability**: Statistically indistinguishable from original images
 
+## 📋 Development Roadmap
+
 ### **🗄️ Data Storage Architecture**
-```json
-{
-  "vault": {
-    "version": "1.0.0",
-    "created": "2024-01-15T10:30:00Z",
-    "lastModified": "2024-01-15T12:45:00Z",
+
+### **✅ Version 1.0.0 (Current Release)**```json
+
+- Complete password manager with CRUD operations{
+
+- AES-256-GCM encryption with steganographic storage  "vault": {
+
+- Professional JavaFX dark theme interface    "version": "1.0.0",
+
+- Portable Windows distribution with bundled runtime    "created": "2024-01-15T10:30:00Z",
+
+- Security audit logging and master password protection    "lastModified": "2024-01-15T12:45:00Z",
+
     "entries": [
-      {
-        "id": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
-        "website": "example.com",
-        "username": "user@example.com",
-        "stegoImage": "vault_entry_f47ac10b.png",
-        "created": "2024-01-15T10:30:00Z",
-        "modified": "2024-01-15T10:30:00Z"
-      }
+
+### **🔮 Planned Features**      {
+
+- [ ] **Password Generator** - Customizable complexity and length rules        "id": "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+
+- [ ] **Import/Export** - CSV, JSON, and XML format support        "website": "example.com",
+
+- [ ] **Enhanced Security** - Two-factor authentication integration        "username": "user@example.com",
+
+- [ ] **Cross-Platform** - Native packages for macOS and Linux        "stegoImage": "vault_entry_f47ac10b.png",
+
+- [ ] **Browser Integration** - Auto-fill extension for major browsers        "created": "2024-01-15T10:30:00Z",
+
+- [ ] **Database Backend** - SQLite option for improved performance        "modified": "2024-01-15T10:30:00Z"
+
+- [ ] **Cloud Sync** - Secure vault synchronization across devices      }
+
     ],
-    "statistics": {
+
+## 🤝 Contributing    "statistics": {
+
       "totalEntries": 1,
-      "totalImages": 1,
+
+We welcome contributions! Here's how to get started:      "totalImages": 1,
+
       "vaultSizeBytes": 2048
-    }
-  }
-}
-```
+
+1. **Fork** the repository on GitHub    }
+
+2. **Create** a feature branch (`git checkout -b feature/AmazingFeature`)  }
+
+3. **Commit** your changes (`git commit -m 'Add some AmazingFeature'`)}
+
+4. **Push** to the branch (`git push origin feature/AmazingFeature`)```
+
+5. **Open** a Pull Request with a clear description
 
 ## 📋 **Feature Implementation Status**
 
-### ✅ **Core Features (100% Complete)**
-- [x] **Master Password Authentication** - Secure login with PBKDF2 key derivation
-- [x] **Password Entry Management** - Full CRUD operations with form validation
-- [x] **AES-256-GCM Encryption** - Military-grade authenticated encryption
+### **Development Guidelines**
+
+- Follow existing code style and naming conventions### ✅ **Core Features (100% Complete)**
+
+- Add appropriate comments and documentation- [x] **Master Password Authentication** - Secure login with PBKDF2 key derivation
+
+- Include unit tests for new functionality- [x] **Password Entry Management** - Full CRUD operations with form validation
+
+- Ensure all existing tests pass before submitting- [x] **AES-256-GCM Encryption** - Military-grade authenticated encryption
+
 - [x] **Steganographic Concealment** - LSB embedding in PNG images
-- [x] **File-based Vault Storage** - JSON metadata with encrypted image storage
+
+## 📄 License- [x] **File-based Vault Storage** - JSON metadata with encrypted image storage
+
 - [x] **JavaFX Dark Theme UI** - Professional interface with responsive design
-- [x] **Edit Functionality** - Complete edit workflow with proper vault ID management
+
+This project is licensed under the **MIT License** - see the [LICENSE](LICENSE) file for complete details.- [x] **Edit Functionality** - Complete edit workflow with proper vault ID management
+
 - [x] **Portable Distribution** - Self-contained package with JavaFX runtime (~110MB)
-- [x] **Security Logging** - Console audit trail for all operations
+
+## ⚠️ Security Disclaimer- [x] **Security Logging** - Console audit trail for all operations
+
 - [x] **Master Password Protection** - Required verification for sensitive operations
 
+While AegisVault implements industry-standard cryptographic practices including AES-256-GCM and PBKDF2, it is designed primarily for educational and demonstration purposes. For production environments requiring certified security, please consider established password managers that have undergone professional security auditing.
+
 ### ✅ **Security Features (100% Complete)**
-- [x] **Session Management** - Secure master password handling
+
+---- [x] **Session Management** - Secure master password handling
+
 - [x] **Memory Protection** - Automatic cleanup of sensitive data
-- [x] **Vault Integrity** - JSON metadata validation and error handling
+
+<div align="center">- [x] **Vault Integrity** - JSON metadata validation and error handling
+
 - [x] **Crypto Integration** - Seamless AES + steganography workflow
-- [x] **Exception Handling** - Comprehensive error management and user feedback
+
+**🛡️ AegisVault - Where Security Meets Steganography 🛡️**- [x] **Exception Handling** - Comprehensive error management and user feedback
+
 - [x] **File System Security** - Proper vault directory structure and permissions
 
+*Protecting your digital identity, one encrypted pixel at a time.*
+
 ### ✅ **User Interface (100% Complete)**
-- [x] **Splash Screen** - Professional startup animation with progress bar
+
+</div>- [x] **Splash Screen** - Professional startup animation with progress bar
 - [x] **Login Screen** - Clean authentication interface with password masking
 - [x] **Dashboard** - Modern password management interface with statistics
 - [x] **Add/Edit Dialogs** - Form-based password entry with validation
